--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                     <option value="licença_pedido">Pedido de Licença/Reserva</option>
                     <option value="licença_retorno">Retorno de licença/Reserva</option>
                     <option value="mudança_cargo">Promoção/Rebaixamento</option>
-                  
+                    <option value="adv_postagem">Advertência Interna</option>
                     <option value="saída_autopostagem">Saída do Setor</option>
                     <option value="expulsão_postagem">Expulsão do Setor</option>
                     <option value="alteração_nickname">Alteração de nickname</option>
